--- a/app/src/main/res/drawable/btn_camera_shutter.xml
+++ b/app/src/main/res/drawable/btn_camera_shutter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/button_take_pic_pressed" />
-    <item android:drawable="@drawable/button_take_pic_normal" />
+    <item android:state_pressed="true" android:drawable="@mipmap/btn_cam_pressed" />
+    <item android:drawable="@mipmap/btn_cam" />
 </selector>
