--- a/app/src/main/res/layout/popuplayout.xml
+++ b/app/src/main/res/layout/popuplayout.xml
@@ -80,8 +80,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxHeight="5dp"
-            android:progressDrawable="@drawable/seekbar_bg"
-            android:thumb="@drawable/seekbar_thumb"
+            android:progressDrawable="@drawable/image_seekbar_bg"
+            android:thumb="@drawable/image_seekbar_thumb"
             android:layout_marginBottom="5dp" />
     </LinearLayout>
 </LinearLayout>
